# ancient

./: .gitignore  Cargo.toml  config.toml
crates/ancient_server/: Cargo.toml
crates/ancient_server/src/: error.rs  main.rs
crates/ancient_server/src/protocol/: array.rs  mod.rs  option.rs  string.rs  vec.rs
derive_macro/: Cargo.toml
derive_macro/src/: decode.rs  encode.rs  input.rs  lib.rs
src/: config.rs  connection.rs  error.rs  main.rs  socket.rs
src/protocol/: array.rs  auth_response.rs  json.rs  mod.rs  optional.rs  primitive.rs  string.rs  uuid.rs  varint.rs  varlong.rs  vec.rs
src/protocol/chat/: click_event.rs  color.rs  component.rs  font.rs  mod.rs
src/protocol/packets/clientbound/: mod.rs
src/protocol/packets/clientbound/login/: disconnect.rs  encryption_request.rs  login_success.rs  mod.rs
src/protocol/packets/clientbound/status/: ping_response.rs  status_response.rs
src/protocol/packets/serverbound/: handshake.rs
src/protocol/packets/serverbound/login/: encryption_response.rs  login_start.rs  mod.rs
src/protocol/packets/serverbound/status/: mod.rs  ping_request.rs  status_request.rs
